:lipstick: adds contextual choice style

--- a/scss/components/challenge/_index.scss
+++ b/scss/components/challenge/_index.scss
@@ -6,6 +6,7 @@
 @import "rating";
 @import "review";
 
+@import "contextual_choice";
 @import "informative";
 @import "informative_markdown";
 @import "multiple-choice-result";
