:lipstick: adds css file for contextual choice

--- a/styles/components/challenge/index.css
+++ b/styles/components/challenge/index.css
@@ -1,5 +1,6 @@
 @import "./actions.css";
 @import "./config.css";
+@import "./contextual_choice.css";
 @import "./gap_fill.css";
 @import "./gap_fill_result.css";
 @import "./info.css";
