:sparkles: remove button for challenge info

--- a/styles/components/challenge/index.css
+++ b/styles/components/challenge/index.css
@@ -1,4 +1,5 @@
 @import "./actions.css";
+@import "./challenge.css";
 @import "./config.css";
 @import "./contextual_choice.css";
 @import "./gap_fill.css";
