:recycle: update challenge result summary

--- a/styles/components/challenge/index.css
+++ b/styles/components/challenge/index.css
@@ -16,5 +16,6 @@
 @import "./placeholder.css";
 @import "./question.css";
 @import "./rating.css";
+@import "./result_summary.css";
 @import "./review.css";
 @import "./sort_table.css";
