:lipstick: adds styles for multiple choice 4 challenge

--- a/styles/components/challenge/index.css
+++ b/styles/components/challenge/index.css
@@ -8,6 +8,7 @@
 @import "./informative.css";
 @import "./informative_markdown.css";
 @import "./multiple_choice.css";
+@import "./multiple_choice4.css";
 @import "./multiple_choice_circle.css";
 @import "./multiple_choice_result.css";
 @import "./options.css";
