:lipstick: improved inbox

--- a/styles/components/index.css
+++ b/styles/components/index.css
@@ -9,6 +9,7 @@
 @import "./domain_selector.css";
 @import "./feedback_popup.css";
 @import "./gdrive_backup.css";
+@import "./inbox.css";
 @import "./leaderboard.css";
 @import "./logo.css";
 @import "./marketplace/index.css";
